--- a/package.json
+++ b/package.json
@@ -3,17 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.9",
-    "@types/node": "11.10.5",
-    "@types/react": "16.8.7",
-    "@types/react-dom": "16.8.2",
+    "formik": "^1.5.1",
     "react": "^16.8.4",
     "react-bootstrap-table-next": "^3.0.2",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
-    "styled-components": "^4.2.0",
-    "typescript": "3.3.3333"
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
