--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "11.10.5",
     "@types/react": "16.8.7",
     "@types/react-dom": "16.8.2",
+    "dotenv": "^8.0.0",
     "firebase": "^5.10.1",
     "react": "^16.8.4",
     "react-bootstrap-table-next": "^3.0.2",
