--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "16.8.2",
     "dotenv": "^8.0.0",
     "firebase": "^5.10.1",
+    "formik": "^1.5.4",
     "react": "^16.8.4",
     "react-bootstrap-table-next": "^3.0.2",
     "react-dom": "^16.8.4",
