--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^5.10.1",
     "formik": "^1.5.4",
     "react": "^16.8.4",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-bootstrap-table-next": "^3.0.2",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
