--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "dotenv": "^8.0.0",
     "firebase": "^5.10.1",
     "formik": "^1.5.4",
+    "moment": "^2.24.0",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-bootstrap-table-next": "^3.0.2",
+    "react-datepicker": "^2.7.0",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
