--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "11.10.5",
     "@types/react": "16.8.7",
     "@types/react-dom": "16.8.2",
+    "axios": "^0.20.0",
     "dotenv": "^8.0.0",
     "firebase": "^5.10.1",
     "formik": "^1.5.4",
@@ -16,7 +17,7 @@
     "react-bootstrap-table-next": "^3.0.2",
     "react-datepicker": "^2.7.0",
     "react-dom": "^16.8.4",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
     "styled-components": "^4.2.0",
     "typescript": "3.3.3333"
