--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@types/jest": "24.0.9",
     "@types/node": "11.10.5",
     "@types/react": "16.8.7",
+    "@types/react-bootstrap-table-next": "^4.0.7",
     "@types/react-dom": "16.8.2",
+    "@types/react-router-dom": "^5.1.5",
     "axios": "^0.20.0",
     "dotenv": "^8.0.0",
     "firebase": "^5.10.1",
