--- a/package.json
+++ b/package.json
@@ -3,26 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.9",
-    "@types/node": "11.10.5",
+    "@types/node": "13.11.0",
     "@types/react": "16.8.7",
+    "@types/react-bootstrap": "^0.32.23",
     "@types/react-bootstrap-table-next": "^4.0.7",
+    "@types/react-datepicker": "^3.1.1",
     "@types/react-dom": "16.8.2",
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.20.0",
     "dotenv": "^8.0.0",
-    "firebase": "^5.10.1",
-    "formik": "^1.5.4",
-    "moment": "^2.24.0",
-    "react": "^16.8.4",
-    "react-bootstrap": "^1.0.0-beta.9",
-    "react-bootstrap-table-next": "^3.0.2",
-    "react-datepicker": "^2.7.0",
-    "react-dom": "^16.8.4",
+    "firebase": "^7.21.0",
+    "formik": "^2.1.5",
+    "moment": "^2.29.0",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-datepicker": "^3.2.2",
+    "react-dom": "^16.13.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "2.1.8",
-    "styled-components": "^4.2.0",
-    "typescript": "3.3.3333"
+    "react-scripts": "^3.4.3",
+    "styled-components": "^5.2.0",
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
