--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/styled-components": "^5.1.3"
+  }
 }
